# legalease

./: .gitignore  ANSWERS.md  Dockerfile  HELP.md  Makefile  README.md  TASKS.md  how_it_works.md  sample_dot_env.txt
legalrank/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  pyproject.toml
legalrank/macros/: generate_schema_name.sql
legalrank/models/mart/: fct__firm_rankings.sql  fct__firm_rankings.yml
legalrank/models/staging/: _sources.yml  stg__firms.sql  stg__firms.yml  stg__practice_areas.sql  stg__practice_areas.yml  stg__rankings.sql  stg__rankings.yml  stg__submissions.sql  stg__submissions.yml
legalrank/seeds/: raw_firms.yml  raw_practice_areas.yml  raw_rankings.yml  raw_submissions.yml
scripts/: load_env.sh
